--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -8,7 +8,7 @@ $text-light: 300;
 $text-normal: 500;
 $text-bold: 700;
 
-$transition-slow: 1s;
 $transition-slow: 0.2s;
+$transition-fast: 1s;
 
 $gutter: 1rem;
