--- a/src/components/Converter/style.scss
+++ b/src/components/Converter/style.scss
@@ -1,6 +1,6 @@
 .converter {
   width: 90%;
   margin: 2rem auto 0;
-  max-width: 400px;
-  height: 90vh;
+  max-width: 350px;
+  max-height: 100vh;
 }
